# game-of-life

./: Cargo.toml  Dockerfile  README.md
configuration/: Cargo.toml
configuration/src/: config.rs  lib.rs  parser.rs
game/: Cargo.toml
game/src/: lib.rs
game/src/elements/: cell.rs  matrix.rs  mod.rs  neighbour.rs  point.rs
game/tests/: cell_tests.rs  matrix_tests.rs
runner/: Cargo.toml
runner/src/: lib.rs  main.rs  utils.rs
src/: client.rs  config.rs  lib.rs  main.rs  parser.rs  server.rs  utils.rs
src/configuration/: cli.rs  config.rs  internal_configuration.rs  mod.rs  mode.rs  parser.rs
src/conway/: cell.rs  game.rs  matrix.rs  mod.rs  neighbour.rs  point.rs  state.rs
src/conway_game/: cell.rs  conway.rs  game_runner.rs  mod.rs  point.rs  run.rs
src/conway_game/elements/: cell.rs  matrix.rs  mod.rs  neighbour.rs
src/game/: conway.rs  game_runner.rs  mod.rs
src/game/elements/: cell.rs  matrix.rs  mod.rs  neighbour.rs  point.rs
src/network/: mod.rs
src/runner/: event_listener.rs  mod.rs  painter.rs  run.rs  tick.rs
src/utils/: mod.rs
src/view/: mod.rs
src/websocket/client/: mod.rs
src/websocket/server/: mod.rs  session.rs
tests/: cell_test.rs  cell_tests.rs  matrix_tests.rs
view/: Cargo.toml
view/src/: lib.rs
websocket/: Cargo.toml
websocket/src/websocket/client/: mod.rs
websocket/src/websocket/server/: session.rs
